--- a/UI/main.html
+++ b/UI/main.html
@@ -12,7 +12,7 @@
             <span class="iconify" data-icon="ant-design:user-outlined" data-width="35" data-height="35"></span>
             <span>Your account</span>
         </div>
-        <img src = "../mockups/extra tasks/Logo.svg" class = "logo"/>
+        <img src = "../mockups/extra tasks/Logo.svg" class = "logo" alt = "logo"/>
         <button type="button" class="exit-button">
             <span id = "exit" class="iconify" data-icon="ion:exit-outline"></span>
         </button>
@@ -53,7 +53,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis. <span class = "hashtag"> #fermentumeros#finibusenim</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -78,7 +78,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#venenatiscommodo#rhoncueuluctusnon</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -103,7 +103,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#rhoncueuluctusnon</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -128,7 +128,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #ligulaasodales#Donecefficitur#rhoncueuluctusnon</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -153,7 +153,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #ligulaasodales#Donecefficitur</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -178,7 +178,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #ipsumdolor</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -203,7 +203,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #Aeneanullamcorper</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -228,7 +228,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #nisisedtellus#Nullameusapien</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -278,7 +278,7 @@
                         Aenean ullamcorper nisi sed tellus venenatis commodo. 
                         Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                         Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                        sed sodales enim mollis quis.
+                        sed sodales enim mollis quis.<span class = "hashtag"> #consecteturadipiscingelit</span>
                     </p>
                     <span class = "comments">
                         <span id = "comment" class="iconify" data-icon="uil:comment-alt-message"></span>
@@ -295,15 +295,7 @@
             <form class = "form">
                 <form class = "form">
                     <p class="filter-header">Author</p>
-                    <select class = "authors-list" multiple size = 4>
-                        <option value="Author-1">Abraham Linkoln</option>
-                        <option value="Author-2">Chandler Bing</option>
-                        <option value="Author-3">Charlie Scene</option>
-                        <option value="Author-4">Howard Wolowitz</option>
-                        <option value="Author-5">Peter Griffin</option>
-                        <option value="Author-6">Phoebe Buffey</option>
-                        <input class="reset-button" type="reset" value="Reset">
-                    </select>
+                    <input class = "text-area" type="text" name = "author" placeholder="Search...">
                 </form>
                 <form class = "form">
                     <p class="filter-header">Date</p>
