--- a/UI/twit.html
+++ b/UI/twit.html
@@ -12,7 +12,7 @@
             <span class="iconify" data-icon="ant-design:user-outlined" data-width="35" data-height="35"></span>
             <span>Your account</span>
         </div>
-        <img src = "../mockups/extra tasks/Logo.svg" class = "logo"/>
+        <img src = "../mockups/extra tasks/Logo.svg" class = "logo" alt = "logo"/>
     </header> 
     <main class="main-twit">
         <div id="twit" class="twit">
@@ -33,20 +33,13 @@
                 Aenean ullamcorper nisi sed tellus venenatis commodo. 
                 Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                 Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                sed sodales enim mollis quis.
+                sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
             </p>
             <span class="comments">
                 <span id="comment" class="iconify" data-icon="uil:comment-alt-message"></span>
                 25
             </span>
         </div>
-        <form id="enter-area-twit" class="enter-area">
-            <textarea name="write-twit" id="enter-area-txt" placeholder="Write a comment..."></textarea>
-            <button type="button" class="tweet-comment-button">
-                Add comment
-                <span id="plus" class="iconify" data-icon="akar-icons:plus"></span>
-            </button>
-        </form>
         <article id="article-twit">
             <div class = "twit">
                 <div class = "twit-top">
@@ -66,7 +59,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -87,7 +80,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -108,7 +101,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -129,7 +122,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -150,7 +143,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -171,7 +164,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -192,7 +185,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -213,7 +206,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -234,7 +227,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <div class = "twit">
@@ -255,7 +248,7 @@
                     Aenean ullamcorper nisi sed tellus venenatis commodo. 
                     Quisque diam arcu, rhoncus eu luctus non, scelerisque vitae nibh. 
                     Fusce volutpat sed ligula a sodales. Donec efficitur risus elit, 
-                    sed sodales enim mollis quis.
+                    sed sodales enim mollis quis.<span class = "hashtag"> #fermentumeros#finibusenim</span>
                 </p>
             </div>
             <button type="button" class="show-more-button">
@@ -263,6 +256,13 @@
                 <span id = "arrow" class="iconify" data-icon="ep:arrow-down-bold"></span>
             </button>
         </article>
+        <form id="enter-area-twit" class="enter-area">
+            <textarea name="write-twit" id="enter-area-txt" placeholder="Write a comment..."></textarea>
+            <button type="button" class="tweet-comment-button">
+                Add comment
+                <span id="plus" class="iconify" data-icon="akar-icons:plus"></span>
+            </button>
+        </form>
     </main>
     <footer>
         <p>Pals Khodoruk Vladislav xodoruk@mail.ru</p>
